--- a/Backend/employeemanager/src/main/resources/application.properties
+++ b/Backend/employeemanager/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager
 spring.datasource.username=root
 
 # MySQL password
-spring.datasource.password=Chanchal@2002
+spring.datasource.password=Df04b^0$zEyT
 
 # Class name of the MySQL JDBC driver
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
